--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-    width: 1200px;
+    width: 1300px;
     margin: 0 auto;
-    /*border: 1px solid seagreen;*/
+    border: 1px solid seagreen;
 }
